# RSDKv2-Decompilation

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Nexus.sln  README.md  RSDKv2.sln
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
Nexus/: Animation.cpp  Animation.hpp  Audio.cpp  Audio.hpp  Collision.cpp  Collision.hpp  Debug.cpp  Debug.hpp  Drawing.cpp  Drawing.hpp  Ini.cpp  Ini.hpp  Input.cpp  Input.hpp  Math.cpp  Math.hpp  ModAPI.cpp  ModAPI.hpp  Nexus.rc  Nexus.vcxproj  Nexus.vcxproj.filters  Object.cpp  Object.hpp  Palette.cpp  Palette.hpp  Player.cpp  Player.hpp  Reader.cpp  Reader.hpp  RetroEngine.cpp  RetroEngine.hpp  Scene.cpp  Scene.hpp  Script.cpp  Script.hpp  Sprite.cpp  Sprite.hpp  String.hpp  Text.cpp  Text.hpp  (+6 more)
Nexus.xcodeproj/: project.pbxproj
Nexus.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Nexus.xcodeproj/xcshareddata/xcschemes/: Nexus.xcscheme
RSDKv2/: Animation.cpp  Animation.hpp  Audio.cpp  Audio.hpp  Debug.cpp  Debug.hpp  Ini.cpp  Math.hpp  ModAPI.cpp  Object.cpp  Palette.hpp  Player.cpp  RSDKv2.rc  RSDKv2.vcxproj  RSDKv2.vcxproj.filters  Reader.hpp  RetroEngine.cpp  RetroEngine.hpp  Scene.cpp  Scene.hpp  Script.cpp  Sprite.cpp  Text.cpp  Text.hpp  Userdata.cpp  main.cpp  resource.h
RSDKv2.xcodeproj/: project.pbxproj
RSDKv2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RSDKv2.xcodeproj/xcshareddata/xcschemes/: RSDKv2.xcscheme
dependencies/mac/: dependencies.txt
dependencies/windows/: dependencies.txt
objects/Nexus/: Animation.cpp.d  Audio.cpp.d  Collision.cpp.d  Debug.cpp.d  Drawing.cpp.d  Ini.cpp.d  Input.cpp.d  Math.cpp.d  Object.cpp.d  Palette.cpp.d  Player.cpp.d  Reader.cpp.d  RetroEngine.cpp.d  Scene.cpp.d  Script.cpp.d  Sprite.cpp.d  String.cpp.d  Text.cpp.d  Userdata.cpp.d  Video.cpp.d  main.cpp.d
props/: winactions.props  winactions_x64.props
